--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,8 @@ body {
   text-transform: uppercase;
   color: #fbfbfb;
   background-color: #7a3145;
-  padding: 16px 41px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   text-align: center;
   border-style: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -299,16 +300,20 @@ body {
 @media screen and (min-width: 768px) {
   .mobile-menu {
     background: linear-gradient(
-      to right,
-      rgba(20, 20, 20, 0.4) 55%,
-      #576f35 45%
+      to left,
+      #576f35 351px,
+      rgba(20, 20, 20, 0.4) 5%
     );
   }
   .mobile-menu-container {
     position: absolute;
     padding-top: 360px;
     padding-bottom: 48px;
-    right: 82px;
+    padding-left: 97px;
+    padding-right: 97px;
+    width: 351px;
+    right: 0;
+    opacity: 1;
   }
   .mobile-menu-nav {
     min-width: 123px;
@@ -858,6 +863,7 @@ body {
 }
 .form-input,
 .form-textarea {
+  outline: transparent;
   border: 1px solid #858585;
   background-color: transparent;
   border-radius: 30px;
@@ -873,6 +879,12 @@ body {
   font-size: 14px;
   line-height: 143%;
   color: #141414;
+}
+.form-input:focus,
+.form-input:hover,
+.form-textarea:focus,
+.form-textarea:hover {
+  border-color: #7a3145;
 }
 .order-btn {
   font-weight: 600;
